--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -13,4 +13,9 @@
     &:hover {
         @include gradient;
     }
+    @media (max-width: 768px){
+        margin-left: 0;
+        margin-bottom: .5rem;
+        margin-top: .5rem;
+    }
 }
