--- a/scss/sections/_intro.scss
+++ b/scss/sections/_intro.scss
@@ -5,9 +5,16 @@
     padding: 10rem 0 0 0;
     width: 100%;
     height: 100%;
+
+    @media (max-width: 768px){
+        padding: 0 0 0 0;
+    }
 }
 
 .myimg{
+    @media (max-width: 768px){
+        margin-top: 2.5rem;
+    }
     position: relative;
     float: right;
     border: 5px solid $primary;
