--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -12096,11 +12096,10 @@ textarea.form-control-lg {
 .warning {
   padding: 6rem 0 0 0;
   width: 100%;
-  margin: 0px;
-  overflow-x: hidden;
+  height: 100%;
   background: orange;
 }
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   .warning {
     display: none;
   }
